--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <meta name="google-site-verification" content="X88-PvqXsQP-62fVRqkxJI1-WyRAvjR6dPdJmZNJc60" />
     <style>
         body {
             height: 100%;
