--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             text-transform: uppercase;
             font-size: 72px;
             margin: 0;
+            font-weight: normal;
         }
 
         section {
