text-shadow: looks nicer

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             font-size: 72px;
             margin: 0;
             font-weight: normal;
+            text-shadow: -1px -1px 0 #b22222;
         }
 
         section {
