--- a/index.html
+++ b/index.html
@@ -2,143 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Coming soon</title>
+    <title>jHERE - Maps Made Easy</title>
     <link href='http://fonts.googleapis.com/css?family=Copse|Oswald' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57"href="icon.png" />
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <style>
-        body {
-            height: 100%;
-            background: url(textured_stripes.png);
-            font-size: 20px;
-            font-family: 'Oswald', sans-serif;
-            color: #222;
-        }
-        .container {
-            position: relative;
-            z-index: 0;
-            margin: 80px auto 20px auto;
-            max-width: 940px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #ff6347;
-            color: rgba(255, 99, 71, 0.9);
-            text-transform: uppercase;
-            font-size: 72px;
-            margin: 0;
-            font-weight: normal;
-            text-shadow: -1px -1px 0 #b22222;
-        }
-
-        section {
-            margin-top: 40px;
-            text-align: center;
-        }
-
-        section div {
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            margin: 0 10px;
-            width: 80px;
-            height: 100px;
-            position: relative;
-            background: #222;
-        }
-
-        .unit {
-            text-transform: uppercase;
-            font-size: 14px;
-            position: absolute;
-            bottom: 0;
-            left: -2px;
-            right: -2px;
-            text-align: center;
-            border: 1px solid #ccc;
-            padding: 3px;
-            margin-bottom: 3px;
-            background: #fff;
-        }
-
-        .number {
-            font-size: 52px;
-            color: #fff;
-            line-height: 1.25;
-        }
-
-        footer {
-            margin-top: 80px;
-            position: absolute;
-            bottom: 5px;
-            left: 0;
-            right: 0;
-            padding: 3px;
-            text-align: center;
-            text-transform: uppercase;
-            font-size: 14px;
-        }
-
-    </style>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-36251953-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
 </head>
 
 <body>
+    <div class="ribbon"></div>
     <div class="container">
+
         <header>
-            <h1>Coming Soon</h1>
+            <div class="logo"><img src="images/logo-white.png" alt="jHERE logo"/></div>
+            <h1>jHERE</h1>
+            <h2>Maps made easy.</h2>
         </header>
-        <section>
-            <div class="days"><span class="number">0</span><span class="unit">Days</span></div>
-            <div class="hours"><span class="number">0</span><span class="unit">Hours</span></div>
-            <div class="minutes"><span class="number">0</span><span class="unit">Minutes</span></div>
-            <div class="seconds"><span class="number">0</span><span class="unit">Seconds</span></div>
-        </section>
+
+        <div class="intro">
+            <section id="map"></section>
+            <nav>
+                <ul>
+                    <li><a href="/" class="active">jHERE</a></li>
+                    <li><a href="/docs.html">Docs</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://jhere.net" data-text="jHERE - Maps made easy:" data-via="mmarcon" data-related="mmarcon" data-hashtags="jHERE">Tweet</a></li>
+                    <li class="facebook"><div class="fb-like" data-href="http://jhere.net" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="lucida grande"></div></li>
+                </ul>
+            </nav>
+            <section>
+                <p>
+                <strong>Maps are cool</strong>, but map APIs are complicated. jHERE solves this problem
+                by offering a simple but powerful map API in the form of a <strong>jQuery (or Zepto.JS) plugin</strong>.
+                </p>
+                <p class="download-link"><a href="https://github.com/mmarcon/jhere/archive/master.zip" class="download">Download jHERE</a> and start making beautiful maps now!</p>
+                <p>
+                    With jHERE, you can easily add <strong>interactive maps</strong> to your website. In only 4KB (1.95KB Gzipped), you get a powerful map API, highly customizable <strong>markers</strong>, event handling and <strong>info bubbles</strong>. Bonus features are <strong>KML</strong> support and data visualization via <strong>heatmaps</strong>.
+                </p>
+                <p>
+                    The examples (not screenshots!) below give an overview of what jHERE can do.
+                    <a href="js/demos.js" title="Demo code">The code</a> is so simple that it needs no explanation!
+                </p>
+                <p>
+                    jHERE is built on top of the awesome and very solid <a href="http://api.maps.nokia.com">HERE Maps API</a>. For advanced users, the native
+                    API is exposed by jHERE, thus offering unlimited possibilities of customization.
+                </p>
+            </section>
+            <section class="demos">
+                <ul>
+                    <li class="simple" title="Simple map, simple interaction, centered in New York"><span>Simple Map</span></li>
+                    <li class="satellite" title="Simple map, simple interaction, satellite view, contextual menu on right click"><span>Satellite</span></li>
+                    <li class="marker" title="Map with a custom marker. Clicking on the marker fires an event."><span>Marker</span></li>
+                    <li class="bubble" title="Map with a non-closable info bubble"><span>Bubble</span></li>
+                    <li class="kml" title="Map showing a KML file. Interaction is disabled."><span>KML</span></li>
+                    <li class="heatmap" title="Heatmap dataviz. Interaction is disabled."><span>Heatmap</span></li>
+                </ul>
+            </section>
+        </div>
     </div>
+
     <footer>
         <small>Massimiliano Marcon &copy; 2012</small>
     </footer>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script>
-    $(function(){
-        var when = 1352851200000;
-        function getDifference() {
-            var diff = when - Date.now();
-            return {
-                diff : diff,
-                ms : Math.floor(diff % 1000 ),
-                s  : Math.floor(diff / 1000 % 60),
-                m  : Math.floor(diff / 60000 % 60),
-                h  : Math.floor(diff / 3600000 % 24),
-                d  : Math.floor(diff / 86400000)
-            };
-        }
 
-        function render(){
-            var d = getDifference();
-            $('.days .number').text(d.d);
-            $('.hours .number').text(d.h);
-            $('.minutes .number').text(d.m);
-            $('.seconds .number').text(d.s);
-            setTimeout(render, 300);
-        }
+    <div class="lightbox-overlay">
+        <div class="lightbox">
+            <span class="close"></span>
+            <div class="demo-map"><!-- map goes here --></div>
+            <span class="caption"><!-- caption goes here --></span>
+        </div>
+    </div>
 
-        render();
-
-    });
-    </script>
+    <script type="text/javascript" src="js/zepto.min.js"></script>
+    <script type="text/javascript" src="js/zepto.adapter.js"></script>
+    <script type="text/javascript" src="js/jhere.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/demosplusheatmap.js"></script>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=185145734898525";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
