--- a/docs.html
+++ b/docs.html
@@ -180,8 +180,8 @@ documentation.</p>
 
 <p><code>closure</code> should look like this:</p>
 
-<pre><code>function(map, nokia){
-   this is the DOM element
-   map is the JSLA map object
-   nokia is the whole JSLA API namespace
+<pre><code>function(map, here){
+   //this is the DOM element
+   //map is the JSLA map object
+   //here is the whole JSLA API namespace
 }</code></pre>                     </div>                              </section>         </div>     </div>      <footer>         <small>Massimiliano Marcon &copy; 2012</small>     </footer>      <script type="text/javascript" src="js/zepto.min.js"></script>     <script type="text/javascript" src="js/zepto.adapter.js"></script>     <script type="text/javascript" src="js/jhere.js"></script>     <script type="text/javascript" src="js/main.js"></script>     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>     <div id="fb-root"></div>     <script>(function(d, s, id) {       var js, fjs = d.getElementsByTagName(s)[0];       if (d.getElementById(id)) return;       js = d.createElement(s); js.id = id;       js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=185145734898525";       fjs.parentNode.insertBefore(js, fjs);     }(document, 'script', 'facebook-jssdk'));</script> </body> </html>
