Added link to playgorund

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <p>
                     The examples (not screenshots!) below give an overview of what jHERE can do.
                     <a href="js/demos.js" title="Demo code">The code</a> is so simple that it needs no explanation!
+                    Experiment with jHERE in <a href="http://bin.jhere.net">the playground</a>!
                 </p>
                 <p>
                     jHERE is built on top of the awesome and very solid <a href="http://api.maps.nokia.com">HERE Maps API</a>. For advanced users, the native
