--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="apple-touch-icon-precomposed" sizes="57x57"href="icon.png" />
+
+    <meta property="og:title" content="jHERE - Maps Made Easy"/>
+    <meta property="og:url" content="http://jhere.net"/>
+    <meta property="og:site_name" content="jHERE"/>
+    <meta property="og:image" content="http://jhere.net/icon.png"/>
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
