Added view code link for demos

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             </section>
             <section class="demos">
                 <ul>
-                    <li class="simple" title="Simple map, simple interaction, centered in New York"><span>Simple Map</span></li>
-                    <li class="satellite" title="Simple map, simple interaction, satellite view, contextual menu on right click"><span>Satellite</span></li>
-                    <li class="marker" title="Map with a custom marker. Clicking on the marker fires an event."><span>Marker</span></li>
-                    <li class="bubble" title="Map with a non-closable info bubble"><span>Bubble</span></li>
-                    <li class="kml" title="Map showing a KML file. Interaction is disabled."><span>KML</span></li>
-                    <li class="heatmap" title="Heatmap dataviz. Interaction is disabled."><span>Heatmap</span></li>
+                    <li class="simple" title="Simple map, simple interaction, centered in New York [http://bin.jhere.net/4066840]"><span>Simple Map</span></li>
+                    <li class="satellite" title="Simple map, simple interaction, satellite view, contextual menu on right click [http://bin.jhere.net/4066844]"><span>Satellite</span></li>
+                    <li class="marker" title="Map with a custom marker. Clicking on the marker fires an event. [http://bin.jhere.net/4066852]"><span>Marker</span></li>
+                    <li class="bubble" title="Map with a non-closable info bubble [http://bin.jhere.net/4066864]"><span>Bubble</span></li>
+                    <li class="kml" title="Map showing a KML file. Interaction is disabled. [http://bin.jhere.net/4066908]"><span>KML</span></li>
+                    <li class="heatmap" title="Heatmap dataviz. Interaction is disabled. [http://bin.jhere.net/4066929]"><span>Heatmap</span></li>
                 </ul>
             </section>
         </div>
