updated link to api website

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     Experiment with jHERE in <a href="http://bin.jhere.net">the playground</a>!
                 </p>
                 <p>
-                    jHERE is built on top of the awesome and very solid <a href="http://api.maps.nokia.com">HERE Maps API</a>. For advanced users, the native
+                    jHERE is built on top of the awesome and very solid <a href="http://developer.here.net">HERE Maps API</a>. For advanced users, the native
                     API is exposed by jHERE, thus offering unlimited possibilities of customization.
                 </p>
             </section>
