--- a/docs.html
+++ b/docs.html
@@ -175,7 +175,7 @@ customize the heatmap look.</p>
 
 <p>This is useful when advanced operations
 that are not exposed by this plugin need to be
-performed. Check <a href="http://api.maps.nokia.com">api.maps.nokia.com</a> for the
+performed. Check <a href="http://developer.here.net">api.maps.nokia.com</a> for the
 documentation.</p>
 
 <p><code>closure</code> should look like this:</p>
