--- a/src/examples/index.route.html
+++ b/src/examples/index.route.html
@@ -18,7 +18,9 @@
 
 <body>
 <div id="map"></div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script>
+<script type="text/javascript" src="../zepto.adapter.js"></script>
 <script type="text/javascript" src="../jhere.js"></script>
 <script type="text/javascript" src="../extensions/route.js"></script>
 <script type="text/javascript">
@@ -26,7 +28,7 @@
         $('#map').jHERE({
             center: [52.5, 13.3],
             zoom: 10
-        }).jHERE('route', {latitude: 52.711, longitude: 13.011}, {latitude: 52.514, longitude: 13.453});
+        }).jHERE('route', [52.711, 13.011], [52.514, 13.453]);
     });
 </script>
 </body>
