--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="js/zepto.min.js"></script>
-    <script type="text/javascript" src="js/zepto.adapter.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/jhere.js"></script>
     <script type="text/javascript" src="js/main.js?v2"></script>
     <script type="text/javascript" src="js/demosplusheatmap.js"></script>
