--- a/src/examples/index.inputlocation.html
+++ b/src/examples/index.inputlocation.html
@@ -22,9 +22,9 @@
 <p>
   <a href="http://thenounproject.com/noun/map-marker/#icon-No2448" target="_blank">Map Marker</a> designed by <a href="http://thenounproject.com/nathan" target="_blank">Nathan Borror</a> from The Noun Project
 </p>
-<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script>
-<script type="text/javascript" src="../zepto.adapter.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script> -->
+<!-- <script type="text/javascript" src="../zepto.adapter.js"></script> -->
 <script type="text/javascript" src="../jhere.js"></script>
 <script type="text/javascript" src="../extensions/inputlocation.js"></script>
 <script type="text/javascript">
