--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -275,16 +275,18 @@ var heatMapData = [
 </script>
 <script type="text/javascript">
 $(window).on('load', function(){
-    $('#map').jHERE({enable: ['behavior', 'zoombar', 'typeselector', 'positioning', 'contextmenu']});
-    $('#map').jHERE('type', 'smart').jHERE('marker', [52.49, 13.37], {text: '●', textColor: '#fff', fill: '#004C9A',
-        click: function(e){
-            alert(JSON.stringify(e.geo));
-        }}).jHERE('marker', [52.49, 13.39], {text: '❤', textColor: '#fff', fill: '#004C9A',
-        click: function(e){
-            $(this).jHERE('bubble', [52.49, 13.39], {content: JSON.stringify(e.geo), closable: false});
-        }}).jHERE('heatmap', heatMapData, 'value');
-     $('#map').jHERE('kml', 'resources/berlin.kml', true);
+    $.jHERE.geocode('Berlin, Germany', function(center){
+        $('#map').jHERE({enable: ['behavior', 'zoombar', 'typeselector', 'positioning', 'contextmenu'], center: center});
+        $('#map').jHERE('type', 'smart').jHERE('marker', [52.49, 13.37], {text: '●', textColor: '#fff', fill: '#004C9A',
+            click: function(e){
+                alert(JSON.stringify(e.geo));
+            }}).jHERE('marker', [52.49, 13.39], {text: '❤', textColor: '#fff', fill: '#004C9A',
+            click: function(e){
+                $(this).jHERE('bubble', [52.49, 13.39], {content: JSON.stringify(e.geo), closable: false});
+            }}).jHERE('heatmap', heatMapData, 'value');
+         $('#map').jHERE('kml', 'resources/berlin.kml');
     });
+});
 </script>
 </body>
 </html>
