--- a/src/examples/index.autoinit.html
+++ b/src/examples/index.autoinit.html
@@ -5,19 +5,36 @@
     <meta charset="utf-8" />
     <title>HTML5 boilerplate—all you really need…</title>
     <style>
-        #map {
+        .map, h2 {
             position: absolute;
             top: 0;
             left: 0;
-            bottom: 0;
             right: 0;
+            height: 50%;
             background: white;
+        }
+        .map1 {
+            top: 50%;
+        }
+
+        h2 {
+            font-family: 'Helvetica', sans-serif;
+            font-weight: 100;
+            margin: 50px 0 0 0;
+            padding: 5px;
+            z-index: 10;
+            height: auto;
+            font-size: 32px;
+            background: rgba(255,255,255,.7);
         }
     </style>
 </head>
 
 <body>
-<div id="map" data-center="40.6699,-73.91461" data-zoom="12" data-type="pt"></div>
+    <h2 class="map0">Centered with coordinates</h2>
+    <div class="map map0" data-center="40.6699,-73.91461" data-zoom="12" data-type="pt"></div>
+    <h2 class="map1">Centered with geocoding of address</h2>
+    <div class="map map1" data-center="Largo da Matriz de Nossa Senhora do Ó, 203, São Paulo, SP, Brazil" data-zoom="15" data-type="satellite"></div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="../jhere.js"></script>
 <script type="text/javascript" src="../extensions/autoinit.js"></script>
