--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     jHERE is built on top of the awesome and very solid <a href="http://developer.here.net">HERE Maps API</a>. For advanced users, the native
                     API is exposed by jHERE, thus offering unlimited possibilities of customization.
                 </p>
+                <p>
+                    jHERE supports extensions, and a couple of them are <a href="https://github.com/mmarcon/jhere/blob/master/EXTENSIONS.md" title="jHERE extensions">already available on Github</a>. It is possible to <a href="http://custom.jhere.net" title="Make a custom build of jHERE">create a custom build</a> of jHERE that includes all the necessary componenents minified and concatenated in a single file.
+                </p>
             </section>
             <section class="demos">
                 <ul>
