Added necessary extension to autoinit example

--- a/src/examples/index.autoinit.html
+++ b/src/examples/index.autoinit.html
@@ -37,6 +37,7 @@
     <div class="map map1" data-center="Largo da Matriz de Nossa Senhora do Ó, 203, São Paulo, SP, Brazil" data-zoom="15" data-type="satellite"></div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="../jhere.js"></script>
+<script type="text/javascript" src="../extensions/geocode.js"></script>
 <script type="text/javascript" src="../extensions/autoinit.js"></script>
 </body>
 </html>
