Check dependency in autonit when geocode is required.
Tested all examples with both zepto and jquery.

--- a/src/examples/index.autoinit.html
+++ b/src/examples/index.autoinit.html
@@ -35,7 +35,9 @@
     <div class="map map0" data-center="40.6699,-73.91461" data-zoom="12" data-type="pt"></div>
     <h2 class="map1">Centered with geocoding of address</h2>
     <div class="map map1" data-center="Largo da Matriz de Nossa Senhora do Ó, 203, São Paulo, SP, Brazil" data-zoom="15" data-type="satellite"></div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script>
+<script type="text/javascript" src="../zepto.adapter.js"></script>
+<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 <script type="text/javascript" src="../jhere.js"></script>
 <script type="text/javascript" src="../extensions/geocode.js"></script>
 <script type="text/javascript" src="../extensions/autoinit.js"></script>
