--- a/src/examples/index.advancedmarkers.html
+++ b/src/examples/index.advancedmarkers.html
@@ -12,12 +12,43 @@
             right: 0;
             background: white;
         }
+
+        ul {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: 0;
+            padding: 0;
+            background: #222;
+            height: 80px;
+        }
+
+        li {
+            display: inline-block;
+            font-family: 'American Typewriter', sans-serif;
+            font-weight: 100;
+            font-size: 24px;
+            padding: 28px 10px;
+            line-height: 1;
+            cursor: pointer;
+            color: #fff;
+            border-right: 1px dotted #666;
+        }
+
+        li:hover, li.active {
+            color: #4169e1;
+        }
     </style>
 </head>
 
 <body>
 <div id="map"></div>
-<div class="route"></div>
+<ul class="toolbar">
+    <li data-group="restaurants">
+        Restaurants
+    </li>
+</ul>
 <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script>
 <script type="text/javascript" src="../zepto.adapter.js"></script>
@@ -27,9 +58,18 @@
     $(window).on('load', function(){
         $('#map').jHERE({
             center: [52.5, 13.3],
-            zoom: 10
-        }).jHERE('marker', [52.5, 13.3], function(marker){
-            marker.on('click', function(){alert('banana'); this.remove();});
+            zoom: 12
+        })
+        .jHERE('marker', [52.5, 13.3], {group: 'restaurants', fill: '#4169e1'})
+        .jHERE('marker', [52.5, 13.35], {group: 'restaurants', fill: '#4169e1'})
+        .jHERE('marker', [52.52, 13.3], {group: 'restaurants', fill: '#4169e1'})
+        .jHERE('marker', [52.51, 13.27], {group: 'restaurants', fill: '#4169e1'})
+        .jHERE('marker', [52.52, 13.34], {group: 'restaurants', fill: '#4169e1'})
+        .jHERE('marker', [52.48, 13.4], {group: 'restaurants', fill: '#4169e1'});
+
+        $('li').on('click', function(){
+            $(this).toggleClass('active');
+            $.jHERE.getMarkersGroup($(this).data('group')).toggle();
         });
     });
 </script>
