--- a/src/examples/index.advancedmarkers.html
+++ b/src/examples/index.advancedmarkers.html
@@ -76,19 +76,31 @@
             marker.on('click', function(){
                 this.toggle();
             });
-        };
+            marker.on('dragend', function(e){
+                console.log(e.drag);
+            });
+        }
+
+        function addRemoveClick(marker){
+            marker.on('click', function(){
+                this.remove();
+            });
+            marker.on('removed', function(){
+                alert('marker removed');
+            });
+        }
 
         $('#map').jHERE({
             center: [52.5, 13.3],
             zoom: 12
         })
-        .jHERE('marker', [52.5, 13.3], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c'}, addClick)
-        .jHERE('marker', [52.5, 13.35], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c'}, addClick)
-        .jHERE('marker', [52.52, 13.3], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c'}, addClick)
-        .jHERE('marker', [52.51, 13.27], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c'}, addClick)
-        .jHERE('marker', [52.52, 13.34], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c'}, addClick)
-        .jHERE('marker', [52.48, 13.4], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c'}, addClick)
-        .jHERE('marker', [52.52, 13.35], {group: 'restaurants', icon: 'resources/monkey2.png', selectedIcon: 'resources/monkey.png', draggable: true}, addClick);
+        .jHERE('marker', [52.5, 13.3], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c', draggable: true}, addClick)
+        .jHERE('marker', [52.5, 13.35], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c', draggable: true}, addClick)
+        .jHERE('marker', [52.52, 13.3], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c', draggable: true}, addClick)
+        .jHERE('marker', [52.51, 13.27], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c', draggable: true}, addClick)
+        .jHERE('marker', [52.52, 13.34], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c', draggable: true}, addClick)
+        .jHERE('marker', [52.48, 13.4], {group: 'restaurants', fill: '#4169e1', selectedFill: '#dc143c', draggable: true}, addClick)
+        .jHERE('marker', [52.52, 13.35], {group: 'restaurants', icon: 'resources/monkey2.png', selectedIcon: 'resources/monkey.png', draggable: true}, addRemoveClick);
 
         $('li').on('click', function(e){
             var group = $.jHERE.getMarkersGroup($(this).data('group'));
