Updated version of jHERE to the most recent and updated docs.

--- a/docs.html
+++ b/docs.html
@@ -22,7 +22,9 @@ the you will need to <strong>include the Zepto adapter</strong> before including
 And you are done.</p>
 
 <p>Make sure the DOM element that will contain the map has the appropriate
-size via CSS, e.g. by setting width and height.</p>                     </div>                                                           <div id="section-3">                         <h3>Make a map</h3>
+size via CSS, e.g. by setting width and height.</p>
+
+<p><strong>Note that jHERE requires Zepto.JS or jQuery > 1.7.</strong></p>                     </div>                                                           <div id="section-3">                         <h3>Make a map</h3>
 
 <p><code>$('.selector').jHERE(options);</code></p>
 
