Added support for announcements and link to HERE Winter Hackathon

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         </div>
     </div>
 
+    <section class="announcement enabled">
+        <p>Don't miss the <a href="http://hacks.here.com">HERE Winter Hackathon</a> on January 19th!</p>
+    </section>
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/jhere.js"></script>
     <script type="text/javascript" src="js/main.js?v2"></script>
