--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </div>
     </div>
 
-    <section class="announcement enabled">
-        <p>Don't miss the <a href="http://hacks.here.com">HERE Winter Hackathon</a> on January 19th!</p>
+    <section class="announcement">
+        <p></p>
     </section>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
