--- a/docs.html
+++ b/docs.html
@@ -63,7 +63,7 @@ Pass <code>false</code> for no components.</p>
 <p><strong>Note on <code>appId</code> and <code>authToken</code>:</strong> the plugin includes by default the credentials
 I used development, and it is ok for you to use the same credentials for development
 and testing purpose. However you should really register on the Nokia developer website
-and get your own. I stringly encourage you to do it especially for production use as
+and get your own. I strongly encourage you to do it especially for production use as
 my credentials may unexpectedtly stop working at any time.</p>                     </div>                                                           <div id="section-4">                         <h3>Set default credentials</h3>
 
 <p><code>$.jHERE.defaultCredentials(appId, authToken);</code></p>
